# ollama-test

./: Dockerfile  docker-compose.yml  pyproject.toml
ollama_test/: apigw_analysis_db.py  test.py
ollama_test/model/: access_log.py  base.py
