[tool.poetry]
name = "ollama-test"
version = "0.1.0"
description = ""
authors = ["Tadashi Takahashi <ttakahashi@umn.co.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ollama = "^0.1.9"
chromadb = "^0.5.0"
llama-index = "^0.10.36"
llama-index-llms-ollama = "^0.1.3"
llama-index-llms-llama-api = "^0.1.4"
ipython = "^8.24.0"
sqlalchemy = "^2.0.30"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
llama-index-embeddings-huggingface = "^0.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
